# ProjectAlgorithmsCGAL

ergasia1/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  convexhull.cpp  convexhull.h  incrementing.cpp  incrementing.h  main.cpp  out.txt  test.txt  util.cpp  util.h  visibleedge.cpp  visibleedge.h
ergasia2/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  LocalSearch.cpp  LocalSearch.h  Makefile  README.md  SimulatedAnnealing.cpp  SimulatedAnnealing.h  a.out  cmake_install.cmake  incrementing.cpp  incrementing.h  main.cpp  out.txt  test.txt  to_polygon  util.cpp  util.h  visibleedge.cpp  visibleedge.h
ergasia3/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  LocalSearch.cpp  LocalSearch.h  Makefile  README.md  SimulatedAnnealing.cpp  SimulatedAnnealing.h  cmake_install.cmake  main.cpp  optimal_polygon  out.txt  polygonization  util.cpp  visibleedge.cpp  visibleedge.h
ergasia3/test/: test.txt
